--- a/Layouts/Level 1.xml
+++ b/Layouts/Level 1.xml
@@ -12001,6 +12001,7 @@
                     </properties>
                     <instance-variables>
                         <Melee>false</Melee>
+                        <Jump>false</Jump>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="BoundToLayout">
