--- a/Layouts/Level Select.xml
+++ b/Layouts/Level Select.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level Select</name>
     <sid>1819743990284944</sid>
-    <event-sheet>Event sheet 2</event-sheet>
+    <event-sheet></event-sheet>
     <size>
         <width>1708</width>
         <height>960</height>
@@ -2741,7 +2741,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="Text" uid="1758">
+                <instance type="lvl3" uid="1758">
                     <properties>
                         <text>Level 3</text>
                         <initial-visibility>Visible</initial-visibility>
