--- a/Layouts/Level Select.uistate.xml
+++ b/Layouts/Level Select.uistate.xml
@@ -8,7 +8,7 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <position-y>240</position-y>
         <position-z>82.6446</position-z>
         <lookat-x>427</lookat-x>
-        <lookat-y>165</lookat-y>
+        <lookat-y>240</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
     <snap-to-grid>1</snap-to-grid>
@@ -23,9 +23,10 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="HUD" />
+    <active-layer name="Main" />
     <layers>
         <layer locked="1" name="Background" parallax-in-editor="0" visible="1" />
+        <layer locked="0" name="Main" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="HUD" parallax-in-editor="0" visible="1" />
     </layers>
 </c2uistate>
