tiled background on level 2

--- a/Layouts/Story.xml
+++ b/Layouts/Story.xml
@@ -133,7 +133,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="Sprite" uid="1764">
+                <instance type="backButton" uid="1764">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
