--- a/Layouts/Level 3.uistate.xml
+++ b/Layouts/Level 3.uistate.xml
@@ -5,10 +5,10 @@ It is entirely optional and the project will load without it.  If you are placin
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
         <position-x>854</position-x>
-        <position-y>1287.46</position-y>
+        <position-y>1448.51</position-y>
         <position-z>161.051</position-z>
         <lookat-x>854</lookat-x>
-        <lookat-y>1287.46</lookat-y>
+        <lookat-y>1448.51</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
     <snap-to-grid>1</snap-to-grid>
@@ -23,7 +23,7 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Background" />
+    <active-layer name="Main" />
     <layers>
         <layer locked="0" name="Background" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Main" parallax-in-editor="0" visible="1" />
