--- a/Layouts/Level 2.xml
+++ b/Layouts/Level 2.xml
@@ -16574,6 +16574,9 @@
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
+                    <instance-variables>
+                        <pressed>false</pressed>
+                    </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
