--- a/Layouts/WakeUp.xml
+++ b/Layouts/WakeUp.xml
@@ -242,7 +242,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="Sprite" uid="2344">
+                <instance type="creditButton" uid="2344">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
